--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Главная - NewsExplorer</title>
     <link
       rel="stylesheet"
-      href="styles/index.f8ba6460414ecca3f160.css?ffb53b975818c7b6baf0"
+      href="styles/index.baf8847a543121ab109d.css?d144a27fd7a12440274e"
       type="text/css"
     />
     <link
@@ -21,7 +21,10 @@
       <header class="header root__section">
         <div class="header__cover">
           <div class="header__navigation">
-            <p class="header__logo">NewsExplorer</p>
+            <div class="header__logo">
+              <p class="header__logo-text">NewsExplorer</p>
+              <img class="header__mobile-icon" src="./images/menu.png" alt="Иконка меню">
+            </div>
             <nav class="header__nav">
               <ul class="header__list">
                 <li class="header__item">
@@ -255,20 +258,20 @@
         <button class="button results__button">Показать еще</button>
       </section>
 
-      <!-- <section class="results root__section">
+      <section class="results root__section">
         <div class="results__loading">
           <div class="results__preloader"></div>
           <p class="results__search">Идет поиск новостей...</p>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section class="results root__section">
+      <section class="results root__section">
         <div class="results__loading">
           <div class="results__not-found-image"></div>
           <h2 class="results__not-found-title">Ничего не найдено</h2>
           <p class="results__search">К сожалению по вашему запросу ничего не найдено.</p>
         </div>
-      </section> -->
+      </section>
 
       <section class="about-author root__section">
         <div class="about-author__photo">
@@ -321,6 +324,6 @@
         </div>
       </footer>
     </div>
-    <script src="index.9cbbe8b25f1eb9e80efb.js?ffb53b975818c7b6baf0"></script>
+    <script src="index.9cbbe8b25f1eb9e80efb.js?d144a27fd7a12440274e"></script>
   </body>
 </html>
