--- a/src/articles.html
+++ b/src/articles.html
@@ -20,7 +20,10 @@
     <div class="root">
       <header class="header root__section">
         <div class="header__navigation">
-          <p class="header__logo header__logo">NewsExplorer</p>
+          <div class="header__logo">
+            <p class="header__logo-text">NewsExplorer</p>
+            <img class="header__mobile-icon" src="<%=require('./images/menu.png').default%>" alt="Иконка меню">
+          </div>
           <nav class="header__nav">
             <ul class="header__list">
               <li class="header__item">
