--- a/src/articles.html
+++ b/src/articles.html
@@ -22,7 +22,7 @@
         <div class="header__navigation">
           <div class="header__logo">
             <p class="header__logo-text">NewsExplorer</p>
-            <img class="header__mobile-icon" src="<%=require('./images/menu.png').default%>" alt="Иконка меню">
+            <img class="header__mobile-icon" src="<%=require('./images/menu-dark.png').default%>" alt="Иконка меню">
           </div>
           <nav class="header__nav">
             <ul class="header__list">
@@ -43,12 +43,9 @@
               <li class="header__item">
                 <a
                   href="#"
-                  class="link header__link_color_black header__link header__link_border-black header__link_logout"
-                  >Грета<img
-                    class="header__logout"
-                    src="<%=require('./images/Union.png').default%>"
-                    alt="icon of logout"
-                /></a>
+                  class="link header__link_color_black header__link header__link_border-black "
+                  >Авторизоваться</a
+                >
               </li>
             </ul>
           </nav>
