--- a/articles.html
+++ b/articles.html
@@ -7,7 +7,7 @@
     <title>Мои статьи - NewsExplorer</title>
     <link
       rel="stylesheet"
-      href="styles/articles.96f57ff94d9897f673d2.css?d144a27fd7a12440274e"
+      href="styles/articles.8a738aeb8e48663a4ed6.css?bbc1509efb62e033ba71"
       type="text/css"
     />
     <link
@@ -20,7 +20,10 @@
     <div class="root">
       <header class="header root__section">
         <div class="header__navigation">
-          <p class="header__logo header__logo">NewsExplorer</p>
+          <div class="header__logo">
+            <p class="header__logo-text">NewsExplorer</p>
+            <img class="header__mobile-icon" src="./images/menu-dark.png" alt="Иконка меню">
+          </div>
           <nav class="header__nav">
             <ul class="header__list">
               <li class="header__item">
@@ -40,12 +43,9 @@
               <li class="header__item">
                 <a
                   href="#"
-                  class="link header__link_color_black header__link header__link_border-black header__link_logout"
-                  >Грета<img
-                    class="header__logout"
-                    src="./images/Union.png"
-                    alt="icon of logout"
-                /></a>
+                  class="link header__link_color_black header__link header__link_border-black "
+                  >Авторизоваться</a
+                >
               </li>
             </ul>
           </nav>
@@ -183,6 +183,6 @@
         </div>
       </footer>
     </div>
-    <script src="articles.492fdecb228a7fbe7a88.js?d144a27fd7a12440274e"></script>
+    <script src="articles.492fdecb228a7fbe7a88.js?bbc1509efb62e033ba71"></script>
   </body>
 </html>
