--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Главная - NewsExplorer</title>
     <link
       rel="stylesheet"
-      href="styles/index.01a1baab1e34fc9c2f49.css?1d7b99cdf7f98a84dde6"
+      href="styles/index.01a1baab1e34fc9c2f49.css?2ac77d2cd42235917628"
       type="text/css"
     />
     <link
@@ -229,7 +229,7 @@
               Находите самые свежие статьи на любую тему и сохраняйте в своём
               личном кабинете.
             </p>
-            <form class="header__info">
+            <form name="search" class="header__info">
               <input
                 id="searchInput"
                 required
@@ -321,6 +321,6 @@
         </div>
       </footer>
     </div>
-    <script src="index.476094d63ea38fd54ca4.js?1d7b99cdf7f98a84dde6"></script>
+    <script src="index.0e43d5ebf9d8f52ed04a.js?2ac77d2cd42235917628"></script>
   </body>
 </html>
