--- a/src/index.html
+++ b/src/index.html
@@ -229,7 +229,7 @@
               Находите самые свежие статьи на любую тему и сохраняйте в своём
               личном кабинете.
             </p>
-            <form class="header__info">
+            <form name="search" class="header__info">
               <input
                 id="searchInput"
                 required
